# open-ev-data-api

./: .clippy.toml  .dockerignore  .gitignore  .releaserc.js  .releaserc.json  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.cursor/rules/: base.mdc
.github/workflows/: ci.yml  documentation.yml  release.yml
crates/ev-core/: Cargo.toml
crates/ev-core/src/: error.rs  lib.rs  validation.rs
crates/ev-core/src/domain/: battery.rs  body.rs  charging.rs  enums.rs  metadata.rs  mod.rs  powertrain.rs  range.rs  sources.rs  types.rs  vehicle.rs
crates/ev-etl/: Cargo.toml
crates/ev-etl/src/: cli.rs  error.rs  lib.rs  main.rs  validate.rs
crates/ev-etl/src/ingest/: mod.rs  parser.rs  reader.rs
crates/ev-etl/src/merge/: mod.rs  strategy.rs
crates/ev-etl/src/output/: csv.rs  json.rs  mod.rs  postgresql.rs  sqlite.rs  statistics.rs  xml.rs
crates/ev-server/: Cargo.toml
crates/ev-server/src/: config.rs  error.rs  lib.rs  main.rs
crates/ev-server/src/api/: health.rs  makes.rs  mod.rs  search.rs  vehicles.rs
crates/ev-server/src/db/: mod.rs  postgresql.rs  sqlite.rs
crates/ev-server/src/models/: mod.rs
docker/: Dockerfile  Dockerfile.dev  Dockerfile.etl  Dockerfile.etl.dev  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  GET_STARTED.md  TESTING.md
fixtures/sample_vehicles/byd/dolphin/2024/: byd_dolphin.json
fixtures/sample_vehicles/tesla/model_3/2024/: model_3.json
schemas/postgresql/: schema.sql
schemas/sqlite/: schema.sql
scripts/release/: build-docker.sh  build-linux.sh  generate-coverage.sh  update-coverage-badge.sh
tests/: api_integration_test.rs  core_validation_test.rs  etl_pipeline_test.rs  integration.rs  merge_logic_test.rs  output_format_test.rs  unit.rs
tests/e2e/: mod.rs
tests/integration/: api_database_test.rs  etl_pipeline_test.rs  mod.rs
tests/others/: mod.rs
tests/others/fixtures/: mod.rs  sample_vehicle.json  sample_vehicle_minimal.json
tests/unit/: mod.rs
tests/unit/ev-core/: error_test.rs  lib_test.rs  mod.rs  validation_test.rs
tests/unit/ev-core/domain/: battery_test.rs  body_test.rs  charging_test.rs  enums_test.rs  metadata_test.rs  mod.rs  powertrain_test.rs  range_test.rs  sources_test.rs  types_test.rs  vehicle_test.rs
tests/unit/ev-etl/: cli_test.rs  error_test.rs  lib_test.rs  mod.rs  validate_test.rs
tests/unit/ev-etl/ingest/: mod.rs  parser_test.rs  reader_test.rs
tests/unit/ev-etl/merge/: merge_test.rs  mod.rs  strategy_test.rs
tests/unit/ev-etl/output/: csv_test.rs  json_test.rs  mod.rs  postgresql_test.rs  sqlite_test.rs  statistics_test.rs  xml_test.rs
tests/unit/ev-server/: config_test.rs  error_test.rs  mod.rs  models_test.rs
tests/unit/ev-server/api/: health_test.rs  makes_test.rs  mod.rs  router_test.rs  search_test.rs  vehicles_test.rs
tests/unit/ev-server/db/: mod.rs  postgresql_test.rs  sqlite_test.rs
