[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"
repository = "https://github.com/open-ev-data/open-ev-data-api"
authors = ["OpenEV Data Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout"] }
rusqlite = { version = "0.34", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
jsonschema = "0.26"
csv = "1.3"
quick-xml = { version = "0.37", features = ["serialize"] }
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.14"
criterion = "0.5"
proptest = "1.6"
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
