[package]
authors.workspace = true
description = "Core domain types and validation logic for OpenEV Data"
edition.workspace = true
license.workspace = true
name = "ev-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
schemars = "1.2.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
