[package]
authors.workspace = true
description = "ETL pipeline for processing OpenEV Data vehicle datasets"
edition.workspace = true
license.workspace = true
name = "ev-etl"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ev-etl"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
ev-core = { path = "../ev-core" }
hex.workspace = true
jsonschema.workspace = true
quick-xml.workspace = true
rayon.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
