[package]
authors.workspace = true
description = "REST API server for OpenEV Data"
edition.workspace = true
license.workspace = true
name = "ev-server"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ev-server"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
ev-core = { path = "../ev-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
